# krita-imagecomplete

./: CMakeLists.txt  INSTALL  ImageComplete.cc  ImageComplete.h  Makefile.am  README  TODO  kritaImageComplete.desktop
Poisson/: Algorithm.cc  Algorithm.h  CMakeLists.txt  ImageData.cc  ImageData.h  Makefile.am  Pixel.cc  Pixel.h  Plane.h  Region.h  defs.h
