# Allow exceptions for this plugin so gmm throws exceptions instead of calling assert
# KDE_CXXFLAGS = $(USE_EXCEPTIONS)

lib_LTLIBRARIES = libPoisson.la

libPoisson_la_SOURCES = Algorithm.cc Pixel.cc ImageData.cc 

METASOURCES = AUTO
INCLUDES = $(all_includes) -I$(includedir)
#-I$(HOME)/koffice/include

